# Binstaller

./: .gitignore  Cargo.toml  readme.md
src/: downloader.rs  error.rs  frame.rs  lib.rs  main.rs
src/modules/: downloader.rs  mod.rs
